Fixed errors, notes and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(donor.recipientImportance)
 export(spatOffset)
 export(spatTempOffset)
 export(standardizeOffset)
+importFrom(foreach,"%dopar%")
