--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: offsetEnsembleR
 Title: A platform for genomic offset estimation, standardization and
     ensemble prediction
 Version: 0.0.0.9000
+Date: 2023-4-14
 Authors@R: c(
     person("Susanne", "Lachmuth", , "susanne.lachmuth@umces.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-4027-7632")),
